--- a/app_documento/app/views/layouts/application.html.erb
+++ b/app_documento/app/views/layouts/application.html.erb
@@ -1,103 +1,29 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <title>Productos Kiwi</title>
-  <%= stylesheet_link_tag    "application", :media => "all" %>
-  <%= javascript_include_tag "application" %>
-  <%= wicked_pdf_stylesheet_link_tag "pdf" -%>
-  <%= wicked_pdf_javascript_include_tag "number_pages" %>
-  <%= csrf_meta_tags %>
-</head>
+  <head>
+    <meta charset="utf-8">
+    <title>Productos Kiwi</title>
+    <%= stylesheet_link_tag    "application", :media => "all" %>
+    <%= javascript_include_tag "application" %>
+    <%= wicked_pdf_stylesheet_link_tag "pdf" -%>
+    <%= wicked_pdf_javascript_include_tag "number_pages" %>
+    <%= csrf_meta_tags %>
+  </head>
 
-<body>
-  <div id="wrapper">
-    <header>
-      <div id="headUp">
-        <%= link_to image_tag("http://placehold.it/450x40/133655/911100.png", :id => "logo"), home_path %>
-        <% if usuario_signed_in? %>
-          <ul>
-            <li class="drop" id="compania" title="<%= current_usuario.compania %>"><%= current_usuario.compania %></li>
-            <ul class="dropAppear" id="companiaAppear">
+  <body>
+    <div id="wrapper">
+      <header>
+      <%= render 'layouts/header' %>
+      <%= render 'layouts/navigation' %>
+      </header>
 
-              <%= link_to content_tag(:li, content_tag(:div, 'Perfil') + image_tag("/assets/settings.png", :class => "dropImg"),
-                                      :class => "dropElem"), current_usuario %>
-              <%= link_to content_tag(:li, content_tag(:div, 'Salir') + image_tag("/assets/exit.png", :class => "dropImg"),
-                                      :class => "dropElem"), destroy_usuario_session_path, :method => :delete %>
-            </ul>
-            <li class="drop" id="alertas">Alertas<div class="alerta" id="alertas" style="background: green;"></div></li>
-            <ul class="dropAppear" id="alertasAppear">
-
-              <li class="dropElem">
-                <div>Alerta super importantisima</div>
-                <div class="alerta" style="background: red;"></div>
-              </li>
-
-            </ul>
-            <!-- NOTE: Color depende de alertas (atributo de background #alerta) -->
-          </ul>
-        <% end %>
+      <div id="content">
+        <%= yield %>
       </div>
 
-      <% if usuario_signed_in? %>
-        <ul id="headDown">
-          <%= link_to content_tag(:li, 'Inicio', :class => "nav"), home_path %>
-          <% case current_usuario.admin
-               when 0 %>
-
-                <%= link_to content_tag(:li, 'Mis Productos', :class => "nav"), productos_path %>
-                <%= link_to content_tag(:li, 'Mis Solicitudes', :class => "nav"), tramites_path %>
-
-  
-<!--               <ul id="ulid">
-              <li class="drop" id="solicitud" title="Mis Solicitudes">Mis Solicitudes</li>
-                <ul class="dropAppear" id="solicitudAppear">
-
-                <%= link_to content_tag(:li, content_tag(:div, 'Listar Solicitudes'),
-                                        :class => "dropElem"), tramites_path %>
-                <%= link_to content_tag(:li, content_tag(:div, 'Crear Solicitud'),
-                                        :class => "dropElem"), new_requisito_path %>
-                </ul>
-              </ul>
- -->
-
-            <% when 1..2%>
-                <%= link_to content_tag(:li, 'Listar Productos', :class => "nav"), productos_path %>
-                <%= link_to content_tag(:li, 'Listar Solicitudes', :class => "nav"), tramites_path %>
-                <%= link_to content_tag(:li, 'Listar Usuarios', :class => "nav"), usuarios_path %>
-                <%= link_to content_tag(:li, 'Logs', :class => "nav"), logproductos_path %>
-
-          <% end %>
-        </ul>
-      </ul>
-      <%end%>
-    </header>
-
-    <div id="content">
-      <%= yield %>
+      <footer>
+      <%= render 'layouts/footer' %>
+      </footer>
     </div>
-
-    <footer>
-      <ul>
-        <% if usuario_signed_in? %>
-          <li>
-            <%= link_to 'Contáctanos', "mailto:marthaovalles@gmail.com",
-                        :title => "Envia un e-mail para comunicarte con nosotros.", :target => "_blank",
-                        :style => "color: white !important; font-weight:20;" %>
-          </li>
-        <% else %>
-          <li>
-            <%= link_to image_tag("/assets/chrome.png",
-                        :title => "Para esta pagina se recomienda usar el explorador Google Chrome."),
-                        "https://www.google.com/intl/en/chrome/browser", :target => "_blank" %>
-          </li>
-        <% end %>
-        <li style="float: right;">
-          <%= link_to image_tag("/assets/kiwi.png", :title => "Elaborado por Kiwi Systems"),
-                      "http://www.facebook.com/chamini2", :target => "_blank" %>
-        </li>
-      </ul>
-    </footer>
-  </div>
-</body>
+  </body>
 </html>
