--- a/app_documento/app/views/layouts/_navigation.html.erb
+++ b/app_documento/app/views/layouts/_navigation.html.erb
@@ -11,6 +11,7 @@
       <%= link_to content_tag(:li, 'Listar Solicitudes', :class => "nav"), tramites_path %>
       <%= link_to content_tag(:li, 'Listar Usuarios', :class => "nav"), usuarios_path %>
       <%= link_to content_tag(:li, 'Logs', :class => "nav"), logproductos_path %>
+      <%= link_to content_tag(:li, 'Documentos', :class => "nav"), documentos_path%>
     <% end %>
   </ul>
 </ul>
