--- a/app_documento/app/views/documentos/index.html.erb
+++ b/app_documento/app/views/documentos/index.html.erb
@@ -1,33 +1,28 @@
-<h1 style="margin-left: 20px;">Listing documentos</h1>
+<h1><%= flash[:title] %></h1>
 
-<table>
-  <tr>
-    <th>Tipo</th>
-    <th>Fecha vencimiento</th>
-    <th>Alerta</th>
-    <th>Fecha emision</th>
-    <th>Archivo</th>
-    <th>Producto</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-
-<% @documentos.each do |documento| %>
-  <tr>
-    <td><%= documento.tipo %></td>
-    <td><%= documento.fecha_vencimiento %></td>
-    <td><%= documento.alerta %></td>
-    <td><%= documento.fecha_emision %></td>
-    <td><%= documento.archivo %></td>
-    <td><%= documento.producto %></td>
-    <td><%= link_to 'Show', documento %></td>
-    <td><%= link_to 'Edit', edit_documento_path(documento) %></td>
-    <td><%= link_to 'Destroy', documento, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
-<% end %>
-</table>
-
-<br />
-
-<%= link_to 'New Documento', new_documento_path %>
+<div class="data_filters">
+  <table id="show_documentos">
+    <thead>
+      <tr>
+        <th> Producto</th>
+        <th>Tipo</th>
+        <th>Fecha vencimiento</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @documentos.each do |d|%>
+        <tr>
+          <td>
+            <%= d.producto.nombre%>
+          </td>
+          <td>
+            <%= link_to d.TipoDocumento.descripcion, d.pdf.url, :target => "_blank" %>
+          </td>
+          <td>
+            <%= d.fecha_vencimiento %>
+          </td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
