Accion de ver registros por produco | tramite

--- a/app_documento/app/views/productos/show.html.erb
+++ b/app_documento/app/views/productos/show.html.erb
@@ -182,6 +182,13 @@
                     </button>
                   </td>
                 </tr>
+                <tr>
+                  <td colspan="2">
+                    <button>
+                      <%= link_to 'Ver registro', logproductos_show_by_user_path(:id => @producto.id) %>
+                    </button>
+                  </td>
+                </tr>
               <% end %>
             </table>
           </td>
