Limpiando un poco el codigo

--- a/app_documento/app/views/layouts/_navigation.html.erb
+++ b/app_documento/app/views/layouts/_navigation.html.erb
@@ -10,7 +10,7 @@
       <%= link_to content_tag(:li, 'Usuarios', :class => "nav"), usuarios_path %>
       <%= link_to content_tag(:li, 'Productos', :class => "nav"), productos_path %>
       <%= link_to content_tag(:li, 'Solicitudes', :class => "nav"), tramites_path %>
-      <%= link_to content_tag(:li, 'Registros', :class => "nav"), logproductos_path %>
+      <%= link_to content_tag(:li, 'Registros', :class => "nav"), logproductos_index_path %>
       <%= link_to content_tag(:li, 'Documentos', :class => "nav"), documentos_path%>
     <% end %>
   </ul>
