--- a/app_documento/app/views/logtramite/index.html.erb
+++ b/app_documento/app/views/logtramite/index.html.erb
@@ -1,7 +1,7 @@
 <h1 style="margin-left: 20px;">Log Solicitudes</h1>
 <div style="margin-left: 40px;margin-bottom: 20px;">
   <button style= Padding:10px>
-    <%= link_to 'Log Productos', logproductos_path %>
+    <%= link_to 'Log Productos', logproductos_index_path %>
   </button>
   <button style= Padding:10px>
     <%= link_to 'Log Documentos', logdocumento_index_path %>
