--- a/app_documento/app/views/layouts/_header.html.erb
+++ b/app_documento/app/views/layouts/_header.html.erb
@@ -1,36 +1,11 @@
-<div id="headUp">
-  <%= link_to image_tag("http://placehold.it/450x40/133655/911100.png", :id => "logo"), home_path %>
-  <% if usuario_signed_in? %>
-    <ul>
-      <li class="drop" id="compania" title="<%= current_usuario.compania %>"><%= current_usuario.compania %></li>
-      <ul class="dropAppear" id="companiaAppear">
-        <%= link_to content_tag(:li, content_tag(:div, 'Perfil') + image_tag("/assets/settings.png", :class => "dropImg"),
-                                :class => "dropElem"), current_usuario %>
-        <%= link_to content_tag(:li, content_tag(:div, 'Salir') + image_tag("/assets/exit.png", :class => "dropImg"),
-                                :class => "dropElem"), destroy_usuario_session_path, :method => :delete %>
+<% if usuario_signed_in? %>
+  <div id="settings" class="btn-group pull-right">
+    <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+      <%= current_usuario.compania %>
+    </button>
+    <ul class="dropdown-menu">
+      <li><%= link_to 'Perfil', current_usuario%></li>
+      <li><%= link_to 'Salir', destroy_usuario_session_path, :method => :delete %></li>
     </ul>
-    <% if current_usuario.admin == 0 %>
-      <% if session[:alerts].length == 0 %>
-        <li class="drop" id="alertas">
-        0 alertas
-        </li>
-      <% else %>
-        <li class="drop" id="alertas">
-        <%= session[:alerts].length.to_s %> alertas
-        <div class="alerta" id="alertas" style="background: green;"></div>
-        </li>
-      <% end %>
-      <ul class="dropAppear" id="alertasAppear">
-        <% session[:alerts].each do |alert|%>
-          <li class="dropElem">
-          <div><%= alert.tipo %></div>
-          <div class="alerta" style="background: red;"></div>
-          </li>
-        <% end %>
-      </ul>
-    <% end %>
-    <!-- NOTE: Color depende de alertas (atributo de background #alerta) -->
-  </ul>
+  </div>
 <% end %>
-</div>
-
