Detalles al layout Vista de inicio

--- a/app_documento/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app_documento/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -1,10 +1,63 @@
 @import "twitter/bootstrap/bootstrap";
-@background_color : rgba(128,0,0,1);
 
+
+
+@import "twitter/bootstrap/responsive";
+
+// Set the correct sprite paths
+@iconSpritePath: asset-path("twitter/bootstrap/glyphicons-halflings");
+@iconWhiteSpritePath: asset-path("twitter/bootstrap/glyphicons-halflings-white");
+
+// Set the Font Awesome (Font Awesome is default. You can disable by commenting below lines)
+@fontAwesomeEotPath: asset-url("fontawesome-webfont.eot");
+@fontAwesomeEotPath_iefix: asset-url("fontawesome-webfont.eot#iefix");
+@fontAwesomeWoffPath: asset-url("fontawesome-webfont.woff");
+@fontAwesomeTtfPath: asset-url("fontawesome-webfont.ttf");
+@fontAwesomeSvgPath: asset-url("fontawesome-webfont.svg#fontawesomeregular");
+
+// Font Awesome
+@import "fontawesome/font-awesome";
+
+// Glyphicons
+//@import "twitter/bootstrap/sprites.less";
+
+// Your custom LESS stylesheets goes here
+//
+// Since bootstrap was imported above you have access to its mixins which
+// you may use and inherit here
+//
+// If you'd like to override bootstrap's own variables, you can do so here as well
+// See http://twitter.github.com/bootstrap/customize.html#variables for their names and documentation
+//
+// Example:
+// @linkColor: #ff0000;
+
+@background_color : rgba(128,0,0,1);
+@linkColor: #000;
+
+body { 
+    background-repeat: no-repeat;
+    height: 100%;
+    list-style: none;
+}
 #wrapper {
   background: #FFF;
   -webkit-box-shadow: 0 0 30px;
   box-shadow: 0 0 30px;
+  height: 100%;
+}
+
+#body{
+  min-height: 500px;
+}
+#body-login {
+  padding-top: 150px;
+  min-height: 500px;
+
+}
+#form-inicio {
+  width: 220px;
+  padding: 10px 30px 10px 30px;
 }
 #settings{
   margin-right: 50px;
@@ -17,7 +70,11 @@
 #footer {
   background-color: @background_color;
   width: 100%;
+  margin-top: 50px;
+  bottom: 0;
 }
+
+
 
 .dropdown-menu {
   background-color: @background_color;
@@ -49,33 +106,3 @@
 .logo > img {
   padding: 20px 0px 0px 20px;
 }
-
-@import "twitter/bootstrap/responsive";
-
-// Set the correct sprite paths
-@iconSpritePath: asset-path("twitter/bootstrap/glyphicons-halflings");
-@iconWhiteSpritePath: asset-path("twitter/bootstrap/glyphicons-halflings-white");
-
-// Set the Font Awesome (Font Awesome is default. You can disable by commenting below lines)
-@fontAwesomeEotPath: asset-url("fontawesome-webfont.eot");
-@fontAwesomeEotPath_iefix: asset-url("fontawesome-webfont.eot#iefix");
-@fontAwesomeWoffPath: asset-url("fontawesome-webfont.woff");
-@fontAwesomeTtfPath: asset-url("fontawesome-webfont.ttf");
-@fontAwesomeSvgPath: asset-url("fontawesome-webfont.svg#fontawesomeregular");
-
-// Font Awesome
-@import "fontawesome/font-awesome";
-
-// Glyphicons
-//@import "twitter/bootstrap/sprites.less";
-
-// Your custom LESS stylesheets goes here
-//
-// Since bootstrap was imported above you have access to its mixins which
-// you may use and inherit here
-//
-// If you'd like to override bootstrap's own variables, you can do so here as well
-// See http://twitter.github.com/bootstrap/customize.html#variables for their names and documentation
-//
-// Example:
-// @linkColor: #ff0000;
