--- a/app_documento/app/assets/stylesheets/inicio.css.scss
+++ b/app_documento/app/assets/stylesheets/inicio.css.scss
@@ -17,122 +17,7 @@ p {
     width: 90%;
 }
 
-#division {
-    width: 100%;
-    height: 100%;
-    border: 0;
-    margin: 0;
-    border-spacing: 0;
-    margin-top: -12px;
 
-    tr {
-        width: 100%;
-        height: 100%;
-        border: 0;
-
-        td {
-            width: 50%;
-            height: 100%;
-            border: 0;
-            padding: 30px;
-
-            .saber {
-                color: #029 !important;
-                font-size: 15px;
-            }
-
-            form {
-                margin: auto;
-                width: 250px;
-                padding: 20px;
-                border: 3px $border_color solid;
-                border-radius: 5px;
-                background-color: #eee;
-
-                td {
-                    padding: 5px;
-                }
-
-                h2 {
-                    margin: 5px;
-                    margin-bottom: 10px;
-                }
-            }
-        }
-    }
-}
-
-#tablas_inicio {
-    width: 800px;
-    height: 100%;
-    margin: 0;
-    border-spacing: 20px;
-    margin-top: 40px;
-
-    tr {
-        width: 100%;
-        height: 100%;
-
-        td{
-            width: 50%;
-            height: 100%;
-            padding-bottom: 5px;
-
-
-            table {
-                border: 0;
-
-                tbody {
-                    td {
-                        /*Puntos suspensivos*/
-                        white-space: nowrap;
-                        overflow: hidden;
-                        text-overflow: ellipsis;
-                        -o-text-overflow: ellipsis;
-                        -ms-text-overflow: ellipsis;
-                        ul {
-                            li {
-                                overflow: hidden;
-                                text-overflow: ellipsis;
-                                -o-text-overflow: ellipsis;
-                                -ms-text-overflow: ellipsis;
-                            }
-                        }
-                    }
-                    tr:nth-child(even) {
-                        background-color: $list_even;
-
-                        td.sorting_1, td.sorting_2, td.sorting_3 {
-                            background-color: transparent;
-                        }
-                    }
-
-                    tr:nth-child(odd) {
-                        background-color: #fff;
-
-                        td.sorting_1, td.sorting_2, td.sorting_3 {
-                            background-color: transparent;
-                        }
-                    }
-
-                    td {
-                        text-align: left;
-                        min-width: 80px;
-                        max-width: 80px;
-                    }
-
-                    tr:hover {
-                        background-color: $list_hover;
-                    }
-
-                    .estados{
-                        margin-bottom: 25px;
-                    }
-                }
-            }
-        }
-    }
-}
 
 .dataTables_filter {
     float: right;
@@ -142,13 +27,7 @@ p {
     }
 }
 
-.dataTables_wrapper {
-    height: 300px;
-}
-
-.titulos_inicio {
-    font-size: 20px;
-    font-family: arial;
-    font-weight: bold;
-    font-style: italic;
+.divider {
+  border-right: 1px solid gray;
+  padding-right: 30px;
 }
