--- a/app_documento/app/views/layouts/application.html.erb
+++ b/app_documento/app/views/layouts/application.html.erb
@@ -11,7 +11,9 @@
   </head>
 
   <body>
-      <div id="wrapper" class ="container">
+    <div id="wrapper" class ="container">
+
+      <% if usuario_signed_in? %>
         <div class="row">
           <div class="span3 logo"><%= image_tag 'logo_Moa.png'%></div> 
           <div class="span9">
@@ -19,8 +21,11 @@
             <%= render 'layouts/navigation' %>
           </div>
         </div>
+      <% end %>
+      <div id="body" class="row">
         <%= yield %>
-        <%= render 'layouts/footer' %>
       </div>
+      <%= render 'layouts/footer' %>
+    </div>
   </body>
 </html>
